--- a/serverless.yml
+++ b/serverless.yml
@@ -1,13 +1,14 @@
-# "org" ensures this Service is used with the correct Serverless Framework Access Key.
-org: fekarlstad23
-# "app" enables Serverless Framework Dashboard features and sharing them with other Services.
+org: fekarlstad23 ##CHANGE TO YOUR ORG
 app: bonzai
-# "service" is the name of this project. This will also be added to your AWS resource names.
 service: awsbonzai
 
 provider:
   name: aws
   runtime: nodejs20.x
+  region: eu-north-1
+  deploymentMethod: direct
+  iam:
+    role: arn:aws:iam::597088039276:role/LambdaDynamoDBRole  ##CHANGE TO YOUR ROLE
 
 functions:
   hello:
