--- a/serverless.yml
+++ b/serverless.yml
@@ -50,6 +50,12 @@ functions:
       - httpApi:
           path: /orders/{id}
           method: put
+  postRoom:
+    handler: functions/postRoom/index.handler
+    events:
+      - httpApi:
+          path: /room
+          method: post
 
 resources:
   Resources:
